--- a/books/res/values/strings.xml
+++ b/books/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="hello">Hello World, MainUI!</string>
     <string name="app_name">安卓图书馆</string>
     <string name="empty_string"></string>
+    <string name="true_calce">您确定要退出吗?</string>
+	<string name="yes">确定</string>
+	<string name="no">取消</string>
 </resources>
